hydro_verus_tests/tests/snapshots/verus_rejects__accepted_proofs_verify.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: verification_results(&stdout)
---
verification results:: 11 verified, 0 errors
