hydro_verus_tests/tests/snapshots/verus_rejects__rejected_proofs_fail_verification@reject_is_new_map.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: "format!(\"{}\\n{}\", verification_results(&stdout), verus_diagnostics(&stderr))"
---
verification results:: 22 verified, 1 errors
error: assertion failed
   --> hydro_verus_tests/src/lib.rs:672:34
    |
672 |                       idempotent = verus_proof_idempotent_map!(
    |  __________________________________^
673 | |                         item = u32,
674 | |                         captures_mut = |max_mut: u32|
675 | |                     )
    | |_____________________^ assertion failed
    |
    = note: this error originates in the macro `verus_proof_idempotent_map` (in Nightly builds, run with -Z macro-backtrace for more info)
error: could not compile `hydro_verus_tests` (lib) due to 1 previous error
