hydro_verus_tests/tests/snapshots/verus_rejects__rejected_proofs_fail_verification@reject_overflowing_fold.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: "format!(\"{}\\n{}\", verification_results(&stdout), verus_diagnostics(&stderr))"
---
verification results:: 11 verified, 1 errors
note: function body check: not all errors may have been reported; rerun with a higher value for --multiple-errors to find other potential errors in this function
   --> hydro_verus_tests/src/lib.rs:296:39
    |
296 |                         commutative = verus_proof_commutative_fold!(acc = u32, item = u32)
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this note originates in the macro `verus_proof_commutative_fold` (in Nightly builds, run with -Z macro-backtrace for more info)
error: possible arithmetic underflow/overflow
   --> hydro_verus_tests/src/lib.rs:294:29
    |
294 | ...                   *acc += x;
    |                       ^^^^^^^^^
error: could not compile `hydro_verus_tests` (lib) due to 1 previous error
