hydro_verus_tests/tests/snapshots/verus_rejects__rejected_proofs_fail_verification@reject_rate_limit_filter.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: "format!(\"{}\\n{}\", verification_results(&stdout), verus_diagnostics(&stderr))"
---
verification results:: 22 verified, 1 errors
error: assertion failed
   --> hydro_verus_tests/src/lib.rs:560:35
    |
560 |                       commutative = verus_proof_commutative_filter!(
    |  ___________________________________^
561 | |                         item = &u32,
562 | |                         captures_mut = |budget_mut: u32|
563 | |                     )
    | |_____________________^ assertion failed
    |
    = note: this error originates in the macro `verus_proof_commutative_filter` (in Nightly builds, run with -Z macro-backtrace for more info)
error: could not compile `hydro_verus_tests` (lib) due to 1 previous error
