hydro_verus_tests/tests/snapshots/verus_rejects__rejected_proofs_fail_verification@reject_reduce_seed.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: "format!(\"{}\\n{}\", verification_results(&stdout), verus_diagnostics(&stderr))"
---
verification results:: 23 verified, 1 errors
error: assertion failed
   --> hydro_verus_tests/src/lib.rs:610:34
    |
610 |                     idempotent = verus_proof_idempotent_reduce!(item = u32)
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assertion failed
    |
    = note: this error originates in the macro `verus_proof_idempotent_reduce` (in Nightly builds, run with -Z macro-backtrace for more info)
error: could not compile `hydro_verus_tests` (lib) due to 1 previous error
