hydro_verus_tests/tests/snapshots/verus_rejects__rejected_proofs_fail_verification@reject_running_total_map.snap
---
source: hydro_verus_tests/tests/verus_rejects.rs
expression: "format!(\"{}\\n{}\", verification_results(&stdout), verus_diagnostics(&stderr))"
---
verification results:: 22 verified, 1 errors
error: assertion failed
   --> hydro_verus_tests/src/lib.rs:525:35
    |
525 |                       commutative = verus_proof_commutative_map!(
    |  ___________________________________^
526 | |                         item = i32,
527 | |                         captures_mut = |count_mut: i32|
528 | |                     )
    | |_____________________^ assertion failed
    |
    = note: this error originates in the macro `verus_proof_commutative_map` (in Nightly builds, run with -Z macro-backtrace for more info)
error: could not compile `hydro_verus_tests` (lib) due to 1 previous error
